--- a/src/src/app/membership/membership-view/membership-view.component.html
+++ b/src/src/app/membership/membership-view/membership-view.component.html
@@ -44,25 +44,25 @@
         <div class="card grow bg-base-300 rounded-2xl shadow-lg">
           <div class="card-body">
             <div class="card-title mb-3">
-              <span class="material-symbols-rounded !text-3xl">card_membership</span>
+              <span class="material-symbols-rounded !text-3xl text-primary">card_membership</span>
               <span class="truncate text-wrap">{{ membership.ecosystem }}</span>
             </div>
             <div class="ml-3 mb-3 grid grid-cols-[minmax(0,auto)_minmax(0,min-content)] gap-4">
               <div class="flex items-center">
-                <span class="material-symbols-rounded mr-1">identity_platform</span>
+                <span class="material-symbols-rounded mr-1 text-info/50">identity_platform</span>
                 <b><i>ID</i></b>
               </div>
               <span>{{ membership.id }}</span>
               @if (membership.since) {
                 <div class="flex items-center">
-                  <span class="material-symbols-rounded mr-1">date_range</span>
+                  <span class="material-symbols-rounded mr-1 text-info/50">date_range</span>
                   <b><i>Since</i></b>
                 </div>
                 <span class="truncate">{{ membership.since.toUTCString() | date: 'yyyy-MM-dd' }}</span>
               }
               @if (membership.until) {
                 <div class="flex items-center">
-                  <span class="material-symbols-rounded mr-1">date_range</span>
+                  <span class="material-symbols-rounded mr-1 text-info/50">date_range</span>
                   <b><i>Until</i></b>
                 </div>
                 <span class="truncate">{{ membership.until.toUTCString() | date: 'yyyy-MM-dd' }}</span>
