--- a/src/src/app/membership/registration/registration.component.html
+++ b/src/src/app/membership/registration/registration.component.html
@@ -27,9 +27,10 @@
             [(ngModel)]="selectedEcosystem">
             <option value="" disabled>Select ecosystem...</option>
             <option value="catena-x">Catena-X</option>
-            <option value="ecosystem-2">Ecosystem 2</option>
-            <option value="ecosystem-3">Ecosystem 3</option>
-            <option value="ecosystem-4">Ecosystem 4</option>
+            <option value="manufacturing-x">Manufacturing-X</option>
+            <option value="mobility-x">Mobility-X</option>
+            <option value="gaia-x">Gaia-X</option>
+            <option value="energy-x">Energy-X</option>
           </select>
         </div>
 
